<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_500"
    tools:context=".ui.view.activity.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogoLogin"
        android:layout_width="200dp"
        android:layout_height="157dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/textEmailLabelLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEntrarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/green_700"
        android:textColor="@color/white"
        android:text="@string/entrar"
        app:layout_constraintBottom_toTopOf="@+id/textCadastreseLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSenhaLabelLayout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textCadastreseLogin"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:text="@string/ainda_nao_tem_acesso_cadastre_se"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrarLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEmailLabelLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        app:layout_constraintBottom_toTopOf="@+id/textSenhaLabelLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmailLogin"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/digite_seu_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textSenhaLabelLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        app:counterTextColor="@color/green_200"
        app:layout_constraintBottom_toTopOf="@+id/btnEntrarLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmailLabelLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSenhaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:inputType="textPassword"
            android:layout_marginEnd="32dp"
            android:hint="@string/digite_sua_senha"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progessBarLogin"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>